<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_padding_top"
    tools:context="app.lereiver.mike.drums.MainActivity"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo2"
        android:textSize="@dimen/header_font_size"
        android:textColor="@color/colorAccent"
        android:layout_gravity="start" />

    <ImageView
        android:onClick="showToast"
        android:src="@drawable/set"
        android:id="@+id/display_image"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="bottom"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom">

        <Button
            android:textSize="@dimen/button_font_size"
            android:onClick="setDrum"
            android:id="@+id/hihat_closed_button"
            android:text="@string/hihat_closed"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80dp" />

        <Button
            android:textSize="@dimen/button_font_size"
            android:onClick="setDrum"
            android:id="@+id/crash_button"
            android:text="@string/crash"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80dp" />

        <Button
            android:textSize="@dimen/button_font_size"
            android:onClick="setDrum"
            android:id="@+id/hihat_open_button"
            android:text="@string/hihat_open"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom">

        <Button
            android:textSize="@dimen/button_font_size"
            android:onClick="setDrum"
            android:id="@+id/snare_button"
            android:text="@string/snare"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80dp" />

        <Button
            android:textSize="@dimen/button_font_size"
            android:onClick="setDrum"
            android:id="@+id/tom_button"
            android:text="@string/tom"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80dp" />

        <Button
            android:textSize="@dimen/button_font_size"
            android:onClick="setDrum"
            android:id="@+id/kick_button"
            android:text="@string/kick"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80dp" />


    </LinearLayout>





</LinearLayout>
